# analise_gr-fica

./: README.md  config.py  pyproject.toml
app/: __init__.py
app/controllers/: acao_controller.py
app/models/: acao_model.py
app/static/css/: style.css
app/static/js/: script.js
app/templates/: acao_commodity.html  ativo_commodity.html  base1.html  index.html
