[tool.poetry]
name = "analise-gráfica"
version = "0.1.0"
description = ""
authors = ["Rodrigo Bettio <rodriguinhobettiojr1@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
flask = "^3.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
